# BootCMatch

./: .gitignore  CMakeLists.txt
AUXIL/AMGMatch/: CMakeLists.txt  amgmatchUtil.cpp  matchOpt.cpp  matchTwoThirdeps.cpp
AUXIL/Matchbox/: CMakeLists.txt  Graph.cc  MatchingEngine.cc  Timer.cc
AUXIL/include/AMGMatch/: amgmatch.h
AUXIL/include/Matchbox/: BptMatchingEngine.h  MatchingEngine.h  Types.h
SRC/: CMakeLists.txt
SRC/AMG/: CMakeLists.txt  bcm_adaptivecoarsening.c  bcm_amg.c  bcm_amg.h  bcm_callcxxfunction.cpp
SRC/BOOTAMG/: CMakeLists.txt
SRC/LINSOLVERS/: CMakeLists.txt
SRC/MATVEC/: CMakeLists.txt  bcm_csr_matrix.c  bcm_matvec.h
SRC/utilities/: CMakeLists.txt  bcm_timer.cc
Test/: CMakeLists.txt  Makefile.in  testkbootsolvers.c  testkbootsolvers3dlap.c
Test/RUNS/: inputkbootsolve  inputkbootsolve3dlap
bcmJulia/: Project.toml
bcmJulia/src/: bcmJulia.jl
cmake/: FindGFortran.cmake  FindHSL.cmake  FindLEMON.cmake  FindSPRAL.cmake  FindSUPERLU.cmake
interfaces/: CMakeLists.txt  bcminterfacescompile.py.in
interfaces/python/: bcminterfaces.py
